# AOC2025

./: .gitignore  Cargo.toml  README.md
aoc-core/: Cargo.toml
aoc-core/src/: answer.rs  lib.rs  puzzle.rs  solution_collection.rs  solution_wrapper.rs  timer.rs  tools.rs
aoc-core/src/tools/: bfs.rs  dijkstra.rs  grid.rs
aoc-core/src/tools/grid/: grid_iterator.rs  grid_printer.rs  path_finder.rs
aoc-procmacro/: Cargo.toml
aoc-procmacro-internals/: Cargo.toml
aoc-procmacro-internals/src/: fetcher.rs  lib.rs
aoc-procmacro/src/: aoc.rs  aoc_puzzle.rs  lib.rs
aoc-procmacro/src/aoc/: attributes.rs
aoc-procmacro/src/aoc_puzzle/: attributes.rs
aoc-solutions-2025/: Cargo.toml
aoc-solutions-2025/benches/: benchmarks.rs
aoc-solutions-2025/src/: lib.rs  main.rs  solutions.rs
aoc-solutions-2025/src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  template.rs
