[package]
name = "aoc-solutions-2025"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
aoc-core = { path = "../aoc-core", default-features = false}
clap = { version = "4.5.21", features = ["derive"] }
lazy_static = "1"
regex = "1"
rayon = "1.10.0"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[build-dependencies]
aoc-core = { path = "../aoc-core" }

[[bench]]
name = "benchmarks"
harness = false
